@@ -27,15 +27,17 @@ public class FieldValueGenerator implements IdentifierGenerator {
     else {
       prefix = field.getRecord().getDataProviderCode();
     }
-    Connection connection = session.connection();
-
+    // Connection must not close because transaction not finished yet.
+    Connection connection = session.connection(); // NOPMD
+    Statement statement = null;
+    ResultSet rs = null;
     try {
-      Statement statement = connection.createStatement();
-      ResultSet rs = statement.executeQuery("SELECT nextval('field_sequence')");
+      statement = connection.createStatement();
+      rs = statement.executeQuery("SELECT nextval('field_sequence')");
 
       if (rs.next()) {
         int id = rs.getInt(1);
-        String idcompose = prefix + new Integer(id).toString();
+        String idcompose = prefix + Integer.valueOf(id);
         String md5Hex = DigestUtils.md5Hex(idcompose).toUpperCase();
         BigInteger bi = new BigInteger(md5Hex, 16);
         Long hexId = bi.longValue();
@@ -48,11 +50,20 @@ public class FieldValueGenerator implements IdentifierGenerator {
       statement.close();
       connection.close();
     } catch (SQLException e) {
-
-      e.printStackTrace();
+      try {
+        if (null != rs) {
+          rs.close();
+        }
+        if (statement != null) {
+          statement.close();
+        }
+        if (null != connection) {
+          connection.close();
+        }
+      } catch (SQLException i) {
+        i.printStackTrace();
+      }
     }
-
     return null;
   }
-
 }
